--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
 $primary-color: #444;
 $secondary-color: #1ed99b;
 
+@mixin easeOut {
+  transition: all 0.5s ease-out;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -14,6 +18,7 @@ body {
   line-height: 1.5;
 }
 
+// Header
 h1,
 h2,
 h3 {
@@ -43,4 +48,31 @@ header {
 
 .text-secondary {
   color: $secondary-color;
+}
+
+// Main section
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+
+      &:hover {
+        color: $secondary-color;
+        @include easeOut;
+      }
+    }
+  }
+
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
+    }
+  }
 }
