--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
 $primary-color: #444;
 $secondary-color: #1ed99b;
-
+$show-home-image: true;
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
 @mixin easeOut {
   transition: all 0.5s ease-out;
 }
@@ -9,7 +11,18 @@ $secondary-color: #1ed99b;
   box-sizing: border-box;
 }
 
+@mixin background {
+  @if $show-home-image {
+    &#bg-img {
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  }
+}
+
 body {
+  @include background;
   background: $primary-color;
   color: #ffffff;
   height: 100%;
