Add a pseudoelement in the background mixin to add an overlap over the body

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,17 @@ $background-opacity: 0.9;
       background-attachment: fixed;
       background-size: cover;
     }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 100%;
+      z-index: -1;
+      background: rgba($primary-color, $background-opacity);
+    }
   }
 }
 
