--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -16,3 +16,14 @@
     @include easeOut;
   }
 }
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+
+  & .show {
+    visibility: visible;
+  }
+}
