--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -53,17 +53,34 @@
   }
 
   .nav-item {
-    transform: translate3d(0, -100px, 0px);
+    transform: translate3d(0, -200px, 0px);
     @include easeOut;
 
     &.show {
       transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    padding: 1.5rem 0;
+    text-transform: uppercase;
+    font-size: 2rem;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
+      transform: scale(1.1);
     }
   }
 }
 
 @for $x from 1 through 4 {
   .nav-item:nth-child(#{$x}) {
-    transition-delay: $x * 0.2s;
+    transition-delay: $x * 0.25s;
   }
 }
