--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,7 @@ header {
 main {
   padding: 4rem;
   height: 100%;
+  text-align: center;
 
   .icons {
     margin-top: 1rem;
@@ -70,6 +71,23 @@ main {
     overflow: hidden;
     h1 {
       margin-top: 20vh;
+    }
+  }
+
+  #get-started {
+    background: transparent;
+    height: 3rem;
+    width: 15%;
+    margin-top: 3rem;
+    border: 2px solid $secondary-color;
+    border-radius: 10px;
+    font-size: 1.1rem;
+    color: #fff;
+
+    &:hover {
+      background: $secondary-color;
+      transform: scale(1.1);
+      @include easeOut;
     }
   }
 }
