--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,6 +83,8 @@ main {
     border-radius: 10px;
     font-size: 1.1rem;
     color: #fff;
+    outline: none;
+    cursor: pointer;
 
     &:hover {
       background: $secondary-color;
