--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "config";
 @import "menu";
+@import "mobile";
 
 * {
   box-sizing: border-box;
@@ -29,6 +30,7 @@ h3 {
   &.sm-heading {
     padding: 0.2rem 1rem;
     background: rgba(lighten($primary-color, 2), 0.5);
+    margin-top: 1.5rem;
   }
 }
 
@@ -55,7 +57,7 @@ main {
   text-align: center;
 
   .icons {
-    margin-top: 1rem;
+    margin-top: 3rem;
 
     a {
       padding: 0.4rem;
@@ -77,7 +79,7 @@ main {
   #get-started {
     background: transparent;
     height: 3rem;
-    width: 15%;
+    width: 15rem;
     margin-top: 3rem;
     border: 2px solid $secondary-color;
     border-radius: 10px;
