--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -28,6 +28,15 @@ $background-opacity: 0.9;
   }
 }
 
+// textcolor function
+
+@function text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
 // Media query mixins
 
 @mixin mediaSm {
