--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -66,6 +66,7 @@
     text-transform: uppercase;
     font-size: 2rem;
     @include easeOut;
+    color: text-color($primary-color);
 
     &:hover {
       color: $secondary-color;
@@ -90,7 +91,7 @@
       width: 28px;
       height: 3px;
       margin: 0 0 5px 0;
-      background: #fff;
+      background: text-color($primary-color);
       @include easeOut;
 
       &:nth-child(1) {
