--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@
 body {
   @include background;
   background: $primary-color;
-  color: #ffffff;
+  color: text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -61,6 +61,7 @@ main {
 
     a {
       padding: 0.4rem;
+      color: text-color($primary-color);
 
       &:hover {
         color: $secondary-color;
@@ -84,7 +85,7 @@ main {
     border: 2px solid $secondary-color;
     border-radius: 10px;
     font-size: 1.1rem;
-    color: #fff;
+    color: text-color($primary-color);
     outline: none;
     cursor: pointer;
 
