--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,7 +53,8 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  // height: 100%;
+  min-height: calc(100vh - 72px);
   text-align: center;
 
   .icons {
@@ -101,6 +102,12 @@ main {
 
 main#about {
   text-align: start;
+  padding-right: 100px;
+
+  h1,
+  h2 {
+    margin-left: 8rem;
+  }
 
   h2 {
     margin-bottom: 5rem;
@@ -118,10 +125,18 @@ main#about {
   grid-area: img;
   height: 350px;
   border-radius: 50%;
+  border: 3px solid $secondary-color;
   margin: auto;
 }
 
 .bio-content {
   grid-area: content;
   text-align: start;
+  line-height: 2rem;
+}
+
+footer {
+  text-align: center;
+  padding: 1.5rem;
+  background: lighten($secondary-color, 1);
 }
