--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -37,6 +37,25 @@
       margin-bottom: 1.5rem;
     }
   }
+
+  // About html
+
+  main#about {
+    text-align: center;
+    padding: 4rem 2rem;
+
+    .bio {
+      grid-template-areas:
+        "img"
+        "content";
+      grid-template-columns: 1fr;
+    }
+
+    .bio-content {
+      text-align: center;
+      margin-top: 3rem;
+    }
+  }
 }
 
 // Phones
