--- a/scss/main.scss
+++ b/scss/main.scss
@@ -134,6 +134,28 @@ main#about {
   line-height: 2rem;
 }
 
+// Projects html
+
+main#project {
+  h2 {
+    margin-bottom: 5rem;
+  }
+}
+.projects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 1rem;
+  img {
+    width: 100%;
+    border: 3px solid $secondary-color;
+
+    &:hover {
+      transform: scale(1.1);
+      @include easeOut;
+    }
+  }
+}
+
 footer {
   text-align: center;
   padding: 1.5rem;
