--- a/scss/main.scss
+++ b/scss/main.scss
@@ -145,6 +145,7 @@ main#project {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 1rem;
+  row-gap: 1rem;
   img {
     width: 100%;
     border: 3px solid $secondary-color;
@@ -155,6 +156,34 @@ main#project {
     }
   }
 }
+
+.btn {
+  display: block;
+  padding: 0.4rem 1rem;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($secondary-color, 10);
+  color: text-color($secondary-color);
+
+  &:hover {
+    background: #fff;
+    color: text-color(#fff);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 40);
+
+  &:hover {
+    background: #fff;
+    color: text-color(#fff);
+  }
+}
+
+// Footer
 
 footer {
   text-align: center;
