--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,6 +1,9 @@
 // Widescreen desktops
 
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Laptops and Desktops
@@ -16,6 +19,11 @@
     .sm-heading {
       margin-bottom: 2.5rem;
     }
+  }
+
+  // Projects
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -56,6 +64,12 @@
       margin-top: 3rem;
     }
   }
+
+  // Projects
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Phones
@@ -67,5 +81,11 @@
 
   main#home .text-secondary {
     margin-left: -15px;
+  }
+
+  // Projects
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
