--- a/scss/main.scss
+++ b/scss/main.scss
@@ -182,6 +182,57 @@ main#project {
   }
 }
 
+// Contact HTML
+
+main#contact {
+  h2 {
+    margin-bottom: 4rem;
+  }
+
+  .contact-form {
+    border: 5px solid $secondary-color;
+    width: 40%;
+    padding: 2rem 1rem;
+    margin: 0 auto;
+    text-align: start;
+
+    label {
+      color: $secondary-color;
+      font-weight: bold;
+      padding-left: 2rem;
+    }
+    input[type="text"],
+    input[type="email"],
+    input[type="number"],
+    textarea {
+      display: block;
+      width: 90%;
+      padding: 0.5rem 0;
+      margin: 10px auto;
+      outline: none;
+    }
+
+    button[type="submit"] {
+      display: block;
+      width: 20%;
+      padding: 0.7rem 0;
+      margin: 2rem auto 0;
+      // margin: 2rem 0 0 0;
+
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      font-size: 1.1rem;
+      cursor: pointer;
+
+      &:hover {
+        background: $secondary-color;
+        transform: scale(1.01);
+      }
+    }
+  }
+}
+
 // Footer
 
 footer {
