--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,13 +100,16 @@ main {
 // About HTML
 
 main#about {
+  h1 {
+    margin-top: 4rem;
+  }
   h1,
   h2 {
     text-align: center;
   }
 
   h2 {
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
   }
 }
 
