Adjust the top margin value of the main project section for smaller devices

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,8 +46,6 @@
     }
   }
 
-  // About html
-
   // Hide Nav2
 
   .menu-btn {
@@ -76,6 +74,9 @@
   }
 
   // Projects
+  main#project {
+    margin-top: 1rem;
+  }
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
