Add hover effect to the second nav-item links

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -124,11 +124,19 @@
       display: inline-block;
       padding-right: 3rem;
 
+      &.current > a {
+        color: $secondary-color;
+      }
+
       a {
         font-size: 1.6rem;
         text-transform: uppercase;
         border-bottom: 1px solid $secondary-color;
         padding-bottom: 0.5rem;
+
+        &:hover {
+          color: $secondary-color;
+        }
       }
     }
   }
