Set the nav-close class and its subclasses to affect only the index.html

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -73,7 +73,10 @@
       transform: scale(1.1);
     }
   }
+}
 
+// This is the styling for the nav-close button only for index.html
+#bg-img {
   .nav-close {
     position: absolute;
     top: 35px;
@@ -104,7 +107,6 @@
     }
   }
 }
-
 // About
 
 .menu2 {
