--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -16,6 +16,28 @@
     background: #fff;
     @include easeOut;
   }
+
+  &.close {
+    .btn-line {
+      &:nth-child(1) {
+        transform: rotate(45deg) translate(6px, 5px);
+      }
+
+      &:nth-child(2) {
+        visibility: hidden;
+      }
+
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(6px, -5px);
+      }
+    }
+  }
+
+  &:hover {
+    .btn-line {
+      background: $secondary-color;
+    }
+  }
 }
 
 .menu {
