--- a/scss/main.scss
+++ b/scss/main.scss
@@ -224,21 +224,23 @@ main#contact {
     }
 
     button[type="submit"] {
+      color: text-color($primary-color);
       display: block;
       width: 20%;
       padding: 0.7rem 0;
       margin: 2rem auto 0;
-      // margin: 2rem 0 0 0;
-
+      background: transparent;
       border-radius: 10px;
-      border: none;
+      border: 1px solid darken($primary-color, 50);
       outline: none;
       font-size: 1.1rem;
       cursor: pointer;
+      @include easeOut;
 
       &:hover {
         background: $secondary-color;
         transform: scale(1.01);
+        @include easeOut;
       }
     }
   }
