--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -13,6 +13,7 @@ $background-opacity: 0.9;
       background: $home-image;
       background-attachment: fixed;
       background-size: cover;
+      background-position: 55% -91%;
     }
 
     &:after {
