--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,6 +115,8 @@ main#about {
 
 .bio {
   display: grid;
+  width: 90%;
+  margin: 0 auto;
   grid-template-areas: "img content content";
   grid-template-columns: repeat(3, 1fr);
   column-gap: 3rem;
