--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@ body {
   color: text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Raleway", sans-serif;
   line-height: 1.5;
 }
 
@@ -152,7 +152,6 @@ main#project {
   img {
     width: 100%;
     border: 3px solid $secondary-color;
-
     &:hover {
       transform: scale(1.1);
       @include easeOut;
