--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,7 +150,8 @@ main#project {
   column-gap: 1rem;
   row-gap: 1rem;
   img {
-    width: 100%;
+    max-width: 100%;
+    height: auto;
     border: 3px solid $secondary-color;
     &:hover {
       transform: scale(1.1);
