--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -132,3 +132,34 @@
     }
   }
 }
+
+// Smaller Phone sizes
+
+@include samsungS10 {
+  main#home span.text-secondary {
+    margin-left: -30px;
+  }
+
+  // About page
+
+  img.profile-img {
+    margin-left: -10px;
+  }
+
+  .bio-content p {
+    margin-left: -10px;
+  }
+
+  // Projects Page
+
+  main#project {
+    span.text-secondary {
+      margin-left: -33px;
+    }
+
+    h2 {
+      margin-top: 50px;
+      margin-bottom: 60px;
+    }
+  }
+}
