--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -163,3 +163,46 @@
     }
   }
 }
+
+// For iphoneXS devices
+
+// Home page
+
+@include iphoneXs {
+  main#home {
+    h1.lg-heading {
+      margin-left: -20px;
+    }
+  }
+
+  // About page
+
+  main#about {
+    img.profile-img {
+      margin-left: -27px;
+    }
+
+    .bio-content p,
+    h3 {
+      margin-left: -30px;
+    }
+  }
+
+  // Projects page
+
+  main#project span.text-secondary {
+    margin-left: -55px;
+  }
+
+  // Contact page
+
+  main#contact {
+    h1.lg-heading {
+      margin-left: -20px;
+    }
+
+    span.text-secondary {
+      margin-left: 20px;
+    }
+  }
+}
